# message-scheduler

./: Cargo.toml  Dockerfile  README.md  docker-compose.local.yml  sqlx-data.json
migrations/: 20221006160831_create_messages.up.sql
src/: config.rs  main.rs
src/core/: action_builder.rs  dispatcher.rs  mod.rs  process_loop.rs  queue.rs
src/http/: handlers.rs  layers.rs  middlware.rs  mod.rs  routes.rs
src/models/: message.rs  mod.rs
src/models/actions/: http.rs  log.rs  mod.rs  sns.rs
