[package]
name = "message-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.145"
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "macros", "uuid", "chrono", "json"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
